--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jainmukul/react-videoplayer.git"
+    "url": "git+https://github.com/jainmukul/react-videoplayer.git"
   },
   "files": [
     "lib",
@@ -45,11 +45,7 @@
     "html5",
     "video"
   ],
-  "author": {
-    "name": "Mukul Jain",
-    "email": "jainmukul1996@gmail.com",
-    "url": "https://mukuljain.me"
-  },
+  "author": "Mukul Jain <jainmukul1996@gmail.com> (https://mukuljain.me)",
   "engines": {
     "node": ">=4"
   },
@@ -118,5 +114,8 @@
     "moduleNameMapper": {
       ".*\\.scss$": "<rootDir>/src/"
     }
+  },
+  "directories": {
+    "lib": "lib"
   }
 }
