--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "build:sass": "node-sass ./src/videoplayer.scss ./lib/index.css",
     "build:sass:umd": "node-sass ./src/videoplayer.scss ./umd/videoplayer.css",
     "build:sass:umd:min": "node-sass ./src/videoplayer.scss ./umd/videoplayer.min.css --output-style compressed",
+    "build:copymedia": "cpy src/media/* lib/media",
     "build:lib": "cross-env NODE_ENV=production babel ./src --stage 0 -d ./lib  --ignore __tests__",
     "build:umd": "cross-env NODE_ENV=production webpack ./src/index.js ./umd/videoplayer.js",
     "build:min": "cross-env NODE_ENV=production webpack -p ./src/index.js ./umd/videoplayer.min.js",
     "build:docs": "cross-env NODE_ENV=production webpack -p --config=docs/webpack.config.js",
-    "build": "npm run build:sass && npm run build:lib && npm run build:umd && npm run build:min && npm run build:sass:umd && npm run build:sass:umd:min",
+    "build": "npm run build:sass && npm run build:lib && npm run build:umd && npm run build:min && npm run build:sass:umd && npm run build:sass:umd:min && npm run build:copymedia",
     "prebuild": "npm run clean:lib && npm test",
-    "docs": "npm run clean:docs && npm run build:docs && cpy docs/favicon.ico public/",
     "deploy": "npm run docs && gh-pages -d public",
     "postpublish": "git push origin master --follow-tags",
     "minor": "npm version minor && npm publish",
