Basic test for props and render

--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      ".*\\.scss$": "<rootDir>/src/"
+      ".*\\.(scss|svg)$": "<rootDir>/src/"
     }
   },
   "directories": {
