--- a/package.json
+++ b/package.json
@@ -89,7 +89,6 @@
     "sass-loader": "^6.0.6",
     "marked": "^0.3.6",
     "opn-cli": "^3.1.0",
-    "prop-types": "^15.5.9",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
     "react-addons-test-utils": "^15.3.1",
@@ -104,8 +103,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
-    "classnames": "^2.2.3",
-    "resize-observer-polyfill": "^1.4.2"
+    "prop-types": "^15.5.9"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
