--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean:docs": "del public",
     "clean": "npm run clean:lib",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "npm run lint && jest",
     "coverage": "npm test -- --coverage",
     "build:sass": "node-sass ./src/videoplayer.scss ./lib/index.css",
@@ -74,9 +75,9 @@
     "eslint-config-standard-jsx": "^3.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-loader": "^1.0.0",
-    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -85,9 +86,8 @@
     "highlight.js": "^9.9.0",
     "html-webpack-plugin": "^2.22.0",
     "jest": "^15.1.1",
-    "node-sass": "^4.5.3",
-    "sass-loader": "^6.0.6",
     "marked": "^0.3.6",
+    "node-sass": "^4.5.3",
     "opn-cli": "^3.1.0",
     "raw-loader": "^0.5.1",
     "react": "^15.3.1",
@@ -96,6 +96,7 @@
     "react-ga": "^2.2.0",
     "react-github-button": "^0.1.11",
     "react-test-renderer": "^15.5.4",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.8",
     "webpack": "^1.13.0",
